--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,10 +15,10 @@ jobs:
           role-to-assume: arn:aws:iam::965778215583:role/terraform20240822004626294300000001
           aws-region: us-west-2
       - uses: hashicorp/setup-terraform@v1
-          with:
-            terraform_version: 1.1.0
-            terraform_wrapper: false
+        with:
+          terraform_version: 1.1.0
+          terraform_wrapper: false
         run: |
           terraform init
           terraform apply -auto-approve
-        working-directory: terraform/global/iam
+        working-directory: stage/data-stores/mysql
