--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,15 +9,19 @@ jobs:
   TerraformApply:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: aws-actions/configure-aws-credentials@v1
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: arn:aws:iam::965778215583:role/terraform20240822004626294300000001
           aws-region: us-west-2
-      - uses: hashicorp/setup-terraform@v1
+      - name: Setup terraform
+        uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 1.1.0
           terraform_wrapper: false
+      - name: Apply terraform
         run: |
           terraform init
           terraform apply -auto-approve
